--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   left: 0;
   right: 0;
   min-width: 100%;
-  overflow-x: hidden;
   overflow-y: auto;
   background-color: white;
   min-height: 100vh;
@@ -22,4 +21,26 @@ a {
 
 .site-body-wrap{
   display: flex;
+  position:relative;
+  z-index:30;
+}
+
+.site-content{
+  display: flex;
+  flex-direction: column;
+}
+
+/* loading screen */
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 130px;
+  height: 130px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0%  { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
