--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -28,7 +28,7 @@
 
 #subgreet {
   text-align: right;
-  color: #747474;
+  color: #ff652f;
   font-family: "Alegreya", serif;
   font-family: "Work Sans", sans-serif;
   max-width: 80%;
