--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   right: 0;
   min-width: 100%;
   overflow-y: auto;
-  background-color: white;
   min-height: 100vh;
 }
 
@@ -23,11 +22,14 @@ a {
   display: flex;
   position:relative;
   z-index:30;
+
 }
 
 .site-content{
   display: flex;
   flex-direction: column;
+  background-color: #272727;
+
 }
 
 /* loading screen */
