--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,5 +1,4 @@
 .hero-wrapper {
-  background-color: #272727;
   min-height: 100vh;
   display: flex;
   text-align: center;
@@ -18,12 +17,12 @@
 #greet {
   color: #ffe400;
   font-family: "Montserrat", sans-serif;
-  font-size: 100px;
+  font-size: 15vw;
   letter-spacing: 8px;
   max-width: 80%;
   position: relative;
   /* left: -4vw; */
-  margin-bottom: 10px;
+  margin-bottom: 2vh;
 }
 
 #subgreet {
@@ -32,7 +31,7 @@
   font-family: "Alegreya", serif;
   font-family: "Work Sans", sans-serif;
   max-width: 80%;
-  font-size: 30px;
+  font-size: 5vw;
   position: relative;
   /* text-transform: uppercase; */
 }
