--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
 }
+
 html,
 body {
   padding: 0;
@@ -10,7 +11,7 @@ body {
   left: 0;
   right: 0;
   min-width: 100%;
-  overflow-y: auto;
+  overflow: none;
   min-height: 100vh;
 }
 
@@ -30,19 +31,4 @@ a {
   flex-direction: column;
   background-color: #272727;
 
-}
-
-/* loading screen */
-.loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
-  border-radius: 50%;
-  width: 130px;
-  height: 130px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0%  { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
