--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,9 @@
 .navbar {
-width: 100%;
+  width: 100%;
   max-height: 10vh;
-  display: flex;
+  overflow: hidden;
+  display: inline-flex;
+
   justify-content: space-between;
   align-items: center;
   background-color: #eee;
@@ -25,6 +27,8 @@ width: 100%;
   top: 0;
   left: 0;
   background-color: transparent;
+  transition: all 0.3s linear;
+
 }
 
 .scrollnav{
@@ -34,6 +38,7 @@ width: 100%;
 .logo img {
   max-width: 50px;
   height: auto;
+  flex: 1;
 }
 .logo img:hover {
   max-width: 50px;
