--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,25 +1,17 @@
 .navbar {
   width: 100%;
-  max-height: 10vh;
+  height: 5vh;
   overflow: hidden;
   display: inline-flex;
-
   justify-content: space-between;
   align-items: center;
   background-color: #eee;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
   position: fixed;
   right: 0;
-  z-index:99;
-}
-/* for phone screens */
-@media (max-width: 411px) {
-  .navbar {
-    display: none;
-  }
-  .logo {
-    display: none;
-  }
+  z-index: 99;
+  user-select: none;
+  /* will-change: transform; */
 }
 
 .scrolled {
@@ -27,37 +19,38 @@
   top: 0;
   left: 0;
   background-color: transparent;
-  transition: all 0.3s linear;
-
+  transition: all 0.2s linear;
 }
 
-.scrollnav{
+.scrollnav {
   display: none;
+}
+
+.logo {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .logo img {
   max-width: 50px;
   height: auto;
-  flex: 1;
 }
 .logo img:hover {
-  max-width: 50px;
-  height: auto;
   cursor: pointer;
-  transform: rotate(50deg);
 }
+
 .navigation {
   float: right;
   font-family: "Roboto", sans-serif;
-  font-size: large;
-  max-width: 60vw;
+  font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 4px;
   font-weight: bold;
   max-width: 100%;
 }
 
-.navlink{
+.navlink {
   list-style-type: none;
   margin: 1vw;
   width: fit-content;
@@ -67,4 +60,14 @@
 .navlink:hover {
   border-bottom: 3px solid;
   cursor: pointer;
+}
+
+/* for phone screens */
+@media (max-width: 411px) {
+  .navbar {
+    max-height: 6vh;
+  }
+  .navigation {
+    font-size: 11px;
+  }
 }
