--- a/src/styles/aboutme.css
+++ b/src/styles/aboutme.css
@@ -1,5 +1,5 @@
 .about {
-  min-height: 100vh;
+  min-height: 50vh;
   color: white;
   max-width: 100vw;
   user-select: none;
@@ -55,12 +55,12 @@
 
 
 #toolset {
-  width: 100%;
+  width: 90%;
   margin-top: 7vh;
   display: flex;
   flex-direction: column;
   height: max-content;
-  align-items: center;
+  justify-content: center;
 }
 
 #toolset h2 {
@@ -82,17 +82,20 @@
 }
 
 .tools {
-  width: 20%;
+  width: 15%;
   display: flex;
   flex-direction: column;
   height: 90%;
   font-size: clamp(15px, 1vw, 22px);
   list-style: none;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .tools li {
   margin: 0 0 10px 0;
+}
+.tools.back{
+  width: max-content;
 }
 
 .tools h4 {
@@ -100,6 +103,7 @@
   margin-bottom: 3vh;
   font-family: "Work Sans", sans-serif;
   font-size: 18px;
+  text-align: left;
 }
 
 #interests {
