--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,11 +1,10 @@
 .sidebar {
   font-family: "Roboto", sans-serif;
   font-size: 24px;
-  text-transform: uppercase;
   position: fixed;
   width: max-content;
   color: white;
-  top: 0;
+  bottom: 0;
   float: right;
   right: 0;
   z-index: 800;
@@ -45,6 +44,16 @@
 .sidebar a:hover {
   transform: scale(1.2);
   font-weight: bold;
+}
+
+#email-add{
+  font-size: 12px;
+  letter-spacing: 2px;
+  writing-mode: vertical-rl;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+  margin-left: 4px;
 }
 
 /* for phone screens */
