--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,10 +1,9 @@
 .contact-wrapper {
-  min-height: 100vh;
+  min-height: 50vh;
   color: white;
   font-family: "Work Sans", sans-serif;
   text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100vw;
@@ -147,7 +146,9 @@ width: max-content;
 .contact-wrapper a {
   cursor: pointer;
   margin-top: 3vh;
+  margin-bottom: 3vh;
 }
+
 .contact-wrapper a:hover {
   text-decoration: underline;
 }
