--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,74 +1,81 @@
+@font-face {
+  font-family: 'Bogart';
+  src: local('Bogart'), url(./fonts/Bogart-Regular-trial.ttf) format('opentype');
+}
+
 .hero-wrapper {
- height: 100vh;
+  height: 100vh;
   display: flex;
   max-width: 100vw;
   flex-direction: column;
-  align-items:center;
   user-select: none;
   justify-content: center;
 }
 
-#hero-body {
+.hero-body {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
+  width: 80%;
+  height: 50%;
+  margin-left: 2%;
 }
 
-#greeting{
-  color: #fffbd9;
-  font-family: "Work Sans", sans-serif;
+.hero-body h1 {
+  color: #fff;
+  background: linear-gradient( 271deg, #a0e9ff 30%, #a162e8 50%, #f093b0 70%, #edca85 94%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #232320;
+  font-family: Bogart, Helvetica, Arial, sans-serif;
+  font-size: 7.8em;
+  letter-spacing: 1.5px;
+  line-height: 110%;
+  margin: 0;
+  transition: all .2s ease-in-out;
+  width: 80%;
+}
+
+.greeting {
+  color: #e5dfde;
+  font-family: "Work", Arial;
   font-size: clamp(20px, 10vw, 30px);
   width: 80%;
-  margin-bottom: 30px;
 }
 
-#name {
-  color: #ffe400;
-  font-family: "Montserrat", sans-serif;
-  font-size: clamp(80px, 20vw, 100px);
-  letter-spacing: 8px;
-  position: relative;
-  margin-bottom: 2vh;
-  text-align: center;
-  /* text-transform: uppercase; */
-}
-
-.name-line{
-  width: 70%;
-  border-bottom: 15px solid #ffe400;
-}
-
-#name-wrap{
-  width: max-content;
-  display: flex;
-  flex-direction: column;
- align-items: center;
- justify-content: center;
- width: 90vw;
-}
-
-#subgreet {
-  text-align: right;
-  color: #ff652f;
-  font-family: "Work Sans", sans-serif;
-  width: 90%;
-  font-size: clamp(12px, 4vw, 32px);
-  position: relative;
+/* BUTTONS */
+.hero-wrapper button {
+  min-width: 50px;
+  max-width: 200px;
+  height: 50px;
+  max-height: 50px;
+  text-transform: uppercase;
+  font-family: "Work", Arial;
   font-weight: bold;
-  float: right;
-  margin-top: 50px;
+  color: #211e1e;
+  border: none;
+  cursor: pointer;
+}
+/*
+.hero-wrapper button.about {
+  background-color: pink;
+} */
+
+.hero-wrapper button.contact {
+  background-color: orange;
 }
 
-#scroll-arrow {
+.scroll-arrow {
   height: 40px;
   animation: 1.2s bounce ease infinite;
   cursor: pointer;
   margin-top: 90px;
   font-weight: bold;
-  color: white;
+  color: #e5dfde;
   font-size: 70px;
+  display: flex;
+  justify-content: center;
 }
 
 @keyframes bounce {
@@ -82,16 +89,3 @@
     transform: translateY(0);
   }
 }
-
-@media (max-width: 735px) {
-  #name {
-    font-size: 20vw;
-}
- #greeting{
-   font-size: 18px;
- }
- #subgreet{
-   font-size: 22px;
- }
-}
-
