--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,6 @@
 html,
 body {
   padding: 0;
-  margin: 0;
   top: 0;
   bottom: 0;
   left: 0;
@@ -14,6 +13,8 @@ body {
   overflow: none;
   min-height: 100vh;
   max-width: 100vw;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 a {
@@ -29,5 +30,11 @@ a {
 .site-content {
   display: flex;
   flex-direction: column;
-  background-color: #272727;
+  background-color: #211e1e;
+}
+
+
+@font-face {
+  font-family: 'Work';
+  src: local('Work'), url(./fonts/WorkSans-VariableFont_wght.ttf) format('opentype');
 }
